# llm-dev-toolkit

./: .gitattributes  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
demo/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
demo/src/: Demo.tsx  Root.tsx  Terminal.tsx  script.ts  theme.ts  timing.ts
docs/: CODEBASE_MAP.md  README.md
docs/adr/: README.md
docs/plans/: build-order-gap-specs.md  spec-development-roadmap.md
docs/proofs/: 2026-06-22-arch-002-mcp-tool-table.md  2026-06-22-build-slices-1-7.md  2026-06-22-cli-ergonomics-spec.md  2026-06-22-maint-001-demo-ci.md  2026-06-22-sec-001-clipboard-fallback.md  2026-06-22-spec0-setup.md  2026-06-22-ticket-runover.md  2026-06-26-current-baseline-and-autonomous-loop.md  2026-06-26-professional-github-readme.md  2026-06-26-tk-upgrade-002-json-runtime-errors.md  README.md
docs/runbooks/: README.md  autonomous-loop.md
docs/specs/: README.md  SPEC-000-planning-system.md  SPEC-010-web-scraper.md  (+7 more)
spec0/: README.md
src/: config.rs  main.rs  mcp.rs
tests/: cli.rs
tickets/: 001-tree-a-includes-git.md  002-stats-directory-overcounts-files.md  003-info-symlink-misclassified.md  004-checksum-invalid-algorithm-exits-zero.md  005-validate-enum-like-cli-options.md  006-search-extension-filter-leading-dot.md  007-ltd-shows-hidden-entries-by-default.md  README.md  _build_order.md  _index.md
(+45 files in other folders)
