[package]
name = "tk"
version = "0.1.0"
edition = "2021"
description = "LLM Dev Toolkit — a fast, single-binary CLI for listing, finding, searching, and inspecting files"
authors = ["Justin Stevens"]
license = "Apache-2.0"
repository = "https://github.com/juxstin1/llm-dev-toolkit"
readme = "README.md"
keywords = ["cli", "files", "search", "ripgrep", "tree"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sha2 = "0.10"
md-5 = "0.10"
filetime = "0.2"
humansize = "2"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
termcolor = "1"
arboard = "3"
mime_guess = "2"
rayon = "1"
same-file = "1"
glob = "0.3"
toml = "0.8"
regex = "1"
